--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "main": "src/index.ts",
   "author": "CheezItMan <chris@adadevelopersacademy.org>",
   "license": "MIT",
+  "scripts": {
+    "start:build": "tsc -w",
+    "start:run": "nodemon build/index.js",
+    "start": "concurrently npm:start:*"
+  },
   "dependencies": {
     "concurrently": "^5.0.0",
     "nodemon": "^1.19.4"
